--- a/Newsletter-2/failure.html
+++ b/Newsletter-2/failure.html
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Failure</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">   
+    <style>
+        .jumbotron {
+            
+  padding: 100px;
+  background-color: #dff0d8;
+  background-image: -webkit-linear-gradient(65deg, #8983e3 30%, #fde8e4 70%);
+  border: 1px solid #e9c6cf;
+  border-radius: 4px;
+  }
+  .jumbotron h1 {
+    font-size: 50px;
+    color: #000000;
+    text-shadow: 2px 2px 2px #ffffff;
+    }
+    .jumbotron p {
+    font-size: 20px;
+    color: #000000;
+    text-shadow: 2px 2px 2px #ffffff;
+    }
+    </style>
 </head>
 <body>
     <div class = "jumbotron jumbotron-fluid">
